Fixed long names overflowing the cards

--- a/src/styles/components/cards.css
+++ b/src/styles/components/cards.css
@@ -29,7 +29,7 @@
 }
 
 .card-name {
-  overflow-wrap: break-word;
+  overflow-wrap: anywhere;
   width: 100%;
 }
 
